# bd_test

./: .env  README.md  alembic.ini  config.py  docker-compose-local.yml  main.py  makefile  pyproject.toml  relationship.txt  Тестовое задание по БД.docx
crud/: crud.py
db/: database.py
migrations/: env.py
migrations/versions/: fb37175611f4_create_tables.py
models/: models.py
queries/: queries_orm.py
routers/: handlers.py
schemas/: products.py
